Correzioni e aggiunta del link alla homepage nelle pagine html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,10 +10,10 @@
 	<div>
 		<h4>Homepage di SIW Catering</h4>
 		<div>
-			<a th:href="@{/login}" th:text="#{index.login}">Accedi</a>
+			<a th:href="@{/login}">Accedi</a>
 		</div>
 		<div>
-			<a th:href="@{/register}" th:text="#{index.register}">Registrati</a>
+			<a th:href="@{/register}">Registrati</a>
 		</div>
 	</div>
 </body>
