--- a/src/main/resources/templates/registrationSuccessful.html
+++ b/src/main/resources/templates/registrationSuccessful.html
@@ -9,8 +9,11 @@
 <body>
 	<div>
 		<h4>Registrazione</h4>
-		<h1>Congratulazioni ti sei registrato!</h1>
+		<h1>Congratulazioni, ti sei registrato!</h1>
 	</div>
+	<footer>
+		<a href="/">Home</a>
+	</footer>
 </body>
 
 </html>
