Modifiche di stile per il link alla home

--- a/src/main/resources/templates/registrationSuccessful.html
+++ b/src/main/resources/templates/registrationSuccessful.html
@@ -12,7 +12,9 @@
 		<h1>Congratulazioni, ti sei registrato!</h1>
 	</div>
 	<footer>
-		<a href="/">Home</a>
+		<div>
+			<a href="/">Home</a>
+		</div>
 	</footer>
 </body>
 
