--- a/src/main/resources/templates/admin/menuAdmin.html
+++ b/src/main/resources/templates/admin/menuAdmin.html
@@ -10,16 +10,16 @@
 	<div>
 		<h4>Menù amministratore</h4>
 		<div>
-			<a href="buffetForm" th:href="@{/admin/buffet}">Inserisci un buffet</a>
+			<a href="admin/buffetForm" th:href="@{/admin/buffet}">Inserisci un buffet</a>
    		</div>
 		<div>
-			<a href="buffet" th:href="@{/buffet}">Elenco buffet</a>
+			<a href="admin/buffet" th:href="@{/admin/buffets}">Elenco buffet</a>
    		</div>
    		<div>
-			<a href="chefForm" th:href="@{/admin/chef}">Inserisci uno chef</a>
+			<a href="admin/chefForm" th:href="@{/admin/chef}">Inserisci uno chef</a>
    		</div>
 		<div>
-			<a href="chef" th:href="@{/chef}">Elenco chef</a>
+			<a href="admin/chef" th:href="@{/admin/chefs}">Elenco chef</a>
    		</div>
 		<div>
 			<a th:href="@{/logout}">Logout</a>
