--- a/src/main/resources/templates/admin/menuAdmin.html
+++ b/src/main/resources/templates/admin/menuAdmin.html
@@ -21,6 +21,18 @@
 		<div>
 			<a href="admin/chef" th:href="@{/admin/chefs}">Elenco chef</a>
    		</div>
+   		<div>
+			<a href="admin/piattoForm" th:href="@{/admin/piatto}">Inserisci un piatto</a>
+   		</div>
+		<div>
+			<a href="admin/piatto" th:href="@{/admin/piatti}">Elenco piatti</a>
+   		</div>
+   		<div>
+			<a href="admin/ingredienteForm" th:href="@{/admin/ingrediente}">Inserisci un ingrediente</a>
+   		</div>
+		<div>
+			<a href="admin/ingrediente" th:href="@{/admin/ingredienti}">Elenco ingredienti</a>
+   		</div>
 		<div>
 			<a th:href="@{/logout}">Logout</a>
 		</div>
