--- a/src/main/resources/templates/user/menuUser.html
+++ b/src/main/resources/templates/user/menuUser.html
@@ -10,11 +10,17 @@
 	<div>
 		<h4>Menù utente</h4>
 		<div>
-			<a href="user/buffets" th:href="@{/user/buffets}">Elenco buffet</a>
-   		</div>
+			<a href="user/buffet" th:href="@{/user/buffets}">Elenco buffet</a>
+		</div>
 		<div>
-			<a href="user/chefs" th:href="@{/user/chefs}">Elenco chef</a>
-   		</div>
+			<a href="user/chef" th:href="@{/user/chefs}">Elenco chef</a>
+		</div>
+		<div>
+			<a href="user/piatto" th:href="@{/user/piatti}">Elenco piatti</a>
+		</div>
+		<div>
+			<a href="user/ingrediente" th:href="@{/user/ingredienti}">Elenco ingredienti</a>
+		</div>
 		<div>
 			<a th:href="@{/logout}">Logout</a>
 		</div>
