--- a/src/main/resources/templates/admin/piatto.html
+++ b/src/main/resources/templates/admin/piatto.html
@@ -17,6 +17,22 @@
 			<span th:if="${!piatto.descrizione.isEmpty()}" th:text="${piatto.descrizione}">Prova</span>
 			<span th:unless="${!piatto.descrizione.isEmpty()}">Non disponibile</span>
 		</div>
+		<div>
+			<span>Elenco degli ingredienti: </span>
+			<span th:if="${ingredienti.isEmpty()}">L'elenco non è disponibile</span>
+			<ul>
+				<li th:each="ingrediente : ${ingredienti}">
+					<a th:if="${ingrediente != null}" href="/admin/ingrediente.html"
+						th:href="@{'/admin/ingrediente' + '/' + ${ingrediente.id}}" th:text="${ingrediente.nome}">Ingrediente di prova</a>
+					<a th:href="@{'/admin/toRemoveIngrediente' + '/' + ${ingrediente.id} + '/From/' + ${piatto.id}}" th:text="Rimuovi">Rimuovi</a>
+				</li>
+			</ul>
+		</div>
+		<div>
+			<a href="/admin/aggiungiIngredienteAlPiatto.html" th:href="@{'/admin/addIngredienteToPiatto' + '/' + ${piatto.id}}"
+				th:text="Aggiungi + ' ' + un + ' ' + ingrediente + ' ' + allelenco + ' ' + degli + ' ' + ingredienti + ' ' + di + ' ' + questo + ' ' + piatto">Aggiungi
+				ingrediente</a>
+		</div>
 	</div>
 	<footer>
 		<div>
