--- a/src/main/resources/templates/user/ingrediente.html
+++ b/src/main/resources/templates/user/ingrediente.html
@@ -22,13 +22,23 @@
 			<span th:if="${!ingrediente.descrizione.isEmpty()}" th:text="${ingrediente.descrizione}">Prova</span>
 			<span th:unless="${!ingrediente.descrizione.isEmpty()}">Non disponibile</span>
 		</div>
+		<div>
+			<span>Elenco dei piatti in cui viene utilizzato questo ingrediente: </span>
+			<span th:if="${piatti.isEmpty()}">L'elenco non è disponibile</span>
+			<ul>
+				<li th:each="piatto : ${piatti}">
+					<a th:if="${piatto != null}" href="/user/piatto.html"
+						th:href="@{'/user/piatto' + '/' + ${piatto.id}}" th:text="${piatto.nome}">Piatto di prova</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 	<footer>
 		<div>
 			<a href="/user/ingredienti">Elenco ingredienti</a>
 		</div>
 		<div>
-			<a href="/menu">Menù amministratore</a>
+			<a href="/menu">Menù utente</a>
 		</div>
 		<div>
 			<a href="/">Home</a>
